<resources>
    <string name="app_name">Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_description">Description</string>
    <string name="hint_type">Type</string>
    <string name="hint_date">Date</string>
    <string name="message_empty_field">Empty field</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_date">Sort by date</string>
    <string name="action_sort_by_rating">Sort by rating</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string-array name="note_types">
        <item>Add New Type</item>
    </string-array>
</resources>
