<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kitayupov.organizer.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_name"
        android:orderInCategory="1"
        android:title="@string/action_sort_by_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_date"
        android:orderInCategory="2"
        android:title="@string/action_sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_rating"
        android:orderInCategory="3"
        android:title="@string/action_sort_by_rating"
        app:showAsAction="never" />
</menu>
